# MountainShooter

./: .gitignore  README.md  pyproject.toml  ruff.toml
src/: main.py  setup.py
src/code/: background.py  const.py  dbProxy.py  enemy.py  enemyShot.py  entity.py  entityFactory.py  entityMediator.py  game.py  gameOver.py  level.py  menu.py  player.py  playerShot.py  score.py
